CommercialApp/objects/Commercial_Account__c.object
<CustomObject>
    <fields>
        <fullName>ACCOUNT_KEY__c</fullName>
        <label>ACCOUNT_KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCOUNT_NAME__c</fullName>
        <label>ACCOUNT_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACC_ADDRESS__c</fullName>
        <label>ACC_ADDRESS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualRevenue__c</fullName>
        <label>AnnualRevenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CALLS_CONTRIBUTION__c</fullName>
        <label>CALLS_CONTRIBUTION</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CALLS__c</fullName>
        <label>CALLS</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLASSIFICATION__c</fullName>
        <label>CLASSIFICATION</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-Target</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CONTRIBUTION__c</fullName>
        <label>CONTRIBUTION</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COUNTRY_NAME__c</fullName>
        <label>COUNTRY_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRENT_PERIOD_SALES__c</fullName>
        <label>CURRENT_PERIOD_SALES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_SEGMENT__c</fullName>
        <label>CUSTOMER_SEGMENT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSTOMER_TYPE__c</fullName>
        <label>CUSTOMER_TYPE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DAYS_SINCE_LAST_ORDER__c</fullName>
        <label>DAYS_SINCE_LAST_ORDER</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GEOGRAPHY_GROWTH__c</fullName>
        <label>GEOGRAPHY_GROWTH</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GEO_KEY__c</fullName>
        <label>﻿GEO_KEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GROWTH__c</fullName>
        <label>GROWTH</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>INSIGHT_DATE__c</fullName>
        <label>INSIGHT_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>INSIGHT_DESCRIPTION__c</fullName>
        <label>INSIGHT_DESCRIPTION</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_CALL_DATE__c</fullName>
        <label>LAST_CALL_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LAST_SHIPMENT_DATE__c</fullName>
        <label>LAST_SHIPMENT_DATE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NETWORK_KEY__c</fullName>
        <label>NETWORK_KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NETWORK_NAME__c</fullName>
        <label>NETWORK_NAME</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEW_ACCOUNT_FLAG__c</fullName>
        <label>NEW_ACCOUNT_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NON_ORDERING_HIGH_VALUE_TARGETS__c</fullName>
        <label>NON_ORDERING_HIGH_VALUE_TARGETS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREVIOUS_PERIOD_SALES_CUMM__c</fullName>
        <label>PREVIOUS_PERIOD_SALES_CUMM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREVIOUS_PERIOD_SALES__c</fullName>
        <label>PREVIOUS_PERIOD_SALES</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRIMARY_GPO__c</fullName>
        <label>PRIMARY_GPO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Record Uneditable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SOURCE_NETWORK_KEY__c</fullName>
        <label>SOURCE_NETWORK_KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIME_BUCKET_KEY__c</fullName>
        <label>TIME_BUCKET_KEY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIME_KEY__c</fullName>
        <label>TIME_KEY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_10_ACCOUNT_FLAG__c</fullName>
        <label>TOP_10_ACCOUNT_FLAG</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRANSPLANT_CENTER__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TRANSPLANT_CENTER</label>
        <type>Checkbox</type>
    </fields>
    <label>Commercial Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ACCOUNT_NAME__c</columns>
        <columns>ACC_ADDRESS__c</columns>
        <columns>CLASSIFICATION__c</columns>
        <columns>NAME</columns>
        <columns>Approval_Status__c</columns>
        <columns>Record_Locked__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Commercial Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lock_record</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name &lt;&gt; &apos;System Administrator&apos;, Record_Locked__c = true)</errorConditionFormula>
        <errorMessage>Record is Locked</errorMessage>
    </validationRules>
</CustomObject>